re-structure.